# bluetooth-priority

./: .gitignore  Cargo.toml  README.md  build-android.ps1
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  stub.cpp
android/app/src/main/kotlin/com/bluetooth_priority/: BluetoothPriorityService.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
src/: lib.rs
