[package]
name = "bluetooth-priority"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "bluetooth_priority"

[dependencies]
jni = "0.21"
jni-sys = "0.3"
log = "0.4"
android_logger = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
